--- a/menu.config
+++ b/menu.config
@@ -1,12 +1,12 @@
 <?php
 	$menu = array(
-		"Monday" 	=> array("麻婆豆腐", "麻婆豆腐麻婆豆腐", "豆腐", "dddd"),
-		"Tuesday" 	=> array("麻婆豆腐", "麻婆豆腐麻婆豆腐", "豆腐"),
-		"Wednesday" => array("麻婆豆腐", "麻婆豆腐麻婆豆腐", "豆腐"),
-		"Thursday" 	=> array("麻婆豆腐", "麻婆豆腐麻婆豆腐", "豆腐"),
-		"Friday" 	=> array("麻婆豆腐", "麻婆豆腐麻婆豆腐", "豆腐"),
-		"Saturday" 	=> array("麻婆豆腐", "麻婆豆腐麻婆豆腐", "豆腐"),
-		"Sunday" 	=> array("麻婆豆腐", "麻婆豆腐麻婆豆腐", "豆腐"),
+		"Monday" 	=> array("佛跳墙", "麻婆猪肉豆腐", "豆腐", "dddd"),
+		"Tuesday" 	=> array("美味肌肉", "麻婆鱼鱼鱼", "豆腐"),
+		"Wednesday" 	=> array("清蒸鲈鱼", "麻狗肉婆豆腐", "豆腐"),
+		"Thursday" 	=> array("豆饼", "麻鸭肉腐", "豆腐"),
+		"Friday" 	=> array("很好吃的小豆腐", "腐鸡肉腐", "豆腐"),
+		"Saturday" 	=> array("腊肠包", "麻婆顶顶顶顶顶腐", "豆腐"),
+		"Sunday" 	=> array("奇怪味道", "你猜不懂", "豆腐"),
 	);
 
 ?>
