--- a/menu.config
+++ b/menu.config
@@ -1,6 +1,6 @@
 <?php
 	$menu = array(
-		"Monday" 	=> array("佛跳墙", "麻婆猪肉豆腐", "豆腐", "鸡肉腊肠"),
+		"Monday" 	=> array("佛跳墙", "麻婆猪肉豆腐", "豆腐", "鸡肉腊肠","啦啦啦"),
 		"Tuesday" 	=> array("美味肌肉", "麻婆鱼鱼鱼", "豆腐"),
 		"Wednesday" 	=> array("清蒸鲈鱼", "麻狗肉婆豆腐", "豆腐"),
 		"Thursday" 	=> array("豆饼", "麻鸭肉腐", "豆腐"),
